--- a/Lesson_7/andfun-kotlin-sleep-tracker-with-recyclerview-starter-code/app/src/main/res/layout/list_item_sleep_night.xml
+++ b/Lesson_7/andfun-kotlin-sleep-tracker-with-recyclerview-starter-code/app/src/main/res/layout/list_item_sleep_night.xml
@@ -26,7 +26,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_sleep_5"
             tools:srcCompat="@drawable/ic_sleep_5"
-            android:contentDescription="TODO" />
+            android:contentDescription="TODO"
+            app:sleepImage="@{sleep}"/>
 
         <TextView
             android:id="@+id/sleep_length"
@@ -39,7 +40,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/quality_image"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Wednesday" />
+            tools:text="Wednesday"
+            app:sleepDurationFormatted="@{sleep}"/>
 
         <TextView
             android:id="@+id/quality_string"
@@ -51,7 +53,8 @@
             android:text="Excellent!!!"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/quality_image"
-            app:layout_constraintTop_toBottomOf="@+id/sleep_length" />
+            app:layout_constraintTop_toBottomOf="@+id/sleep_length"
+            app:sleepQualityString="@{sleep}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
