--- a/Lesson_8/andfun-kotlin-mars-real-estate-Step.01-Exercise-Making-Mars-Web-Service-Contact/app/src/main/res/layout/grid_view_item.xml
+++ b/Lesson_8/andfun-kotlin-mars-real-estate-Step.01-Exercise-Making-Mars-Web-Service-Contact/app/src/main/res/layout/grid_view_item.xml
@@ -34,6 +34,6 @@
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:padding="2dp"
-        app:imageUrl="@{property.img_src}"
+        app:imageUrl="@{property.imgSrcUrl}"
         tools:src="@tools:sample/backgrounds/scenic"/>
 </layout>
